--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
 body{
     background-color: rgb(240, 182, 96);
 }
@@ -20,12 +15,10 @@ main{
     flex-direction: row;
 }
 
-div{
+.container{
     display: flex;
     margin: 1%;
-    padding: 1%;
+    padding: 10px;
     border:solid black;
     border-radius: 3px;
-    height: 400px;
-    width: 400px;
 }
