--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(240, 182, 96);
+    background-color: #f5f5f5;
 }
 
 header{
@@ -8,6 +8,7 @@ header{
     padding: 1%;
     border:solid black;
     border-radius: 3px;
+    background-color: rgb(176, 234, 245);
 }
 
 main{
@@ -15,10 +16,14 @@ main{
     flex-direction: row;
 }
 
-.container{
-    display: flex;
+.container1{
     margin: 1%;
     padding: 10px;
     border:solid black;
     border-radius: 3px;
+    background-color: rgb(176, 234, 245);
+}
+
+#resultado{
+    margin-top: 6px;
 }
