--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@ header{
     display: flex;
     margin: 1%;
     padding: 1%;
-    border:solid black;
-    border-radius: 3px;
+    border:solid black 2px;
+    border-radius: 10px;
     background-color: rgb(176, 234, 245);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 main{
@@ -19,9 +20,10 @@ main{
 .container1{
     margin: 1%;
     padding: 10px;
-    border:solid black;
-    border-radius: 3px;
+    border:solid black 2px;
+    border-radius: 10px;
     background-color: rgb(176, 234, 245);
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 #resultado{
